add create account button to app layout

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,11 +1,6 @@
-.button-state-styles :hover
-.button-state-styles :active
-.button-state-styles :focus
-.button-state-styles.active {
+.button-state-styles :hover .button-state-styles :active .button-state-styles :focus .button-state-styles.active {
     background-color: white !important;
     color: black !important;
 }
 
-.button-state-styles :disabled {
-
-}
+.button-state-styles :disabled {}
