--- a/public/css/app.css
+++ b/public/css/app.css
@@ -861,6 +861,10 @@ select {
   margin-bottom: 1rem;
 }
 
+.mb-6 {
+  margin-bottom: 2rem;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -946,7 +950,7 @@ select {
 }
 
 .w-48 {
-  width: 12rem;
+  width: 10rem;
 }
 
 .w-4 {
@@ -1065,6 +1069,10 @@ select {
   border-radius: 0.5rem;
 }
 
+.rounded-xl {
+  border-radius: 1rem;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1081,6 +1089,22 @@ select {
 
 .border {
   border-width: 1px;
+}
+
+.border-2x {
+  border-width: 2px;
+}
+
+.border-3x {
+  border-width: 3px;
+}
+
+.border-dash {
+  border-style: dashed;
+}
+
+.border-dotted {
+  border-style: dotted;
 }
 
 .border-t {
@@ -1126,6 +1150,21 @@ select {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-success {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22, 66, 22 / var(--tw-bg-opacity));
+}
+
+.bg-green {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22, 66, 22/ var(--tw-bg-opacity));
+}
+
+.bg-green-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(216, 228, 227)/ var(--tw-bg-opacity));
 }
 
 .bg-gray-100 {
@@ -1264,6 +1303,12 @@ select {
   line-height: 1rem;
 }
 
+
+.text-xxs {
+  font-size: 0.6rem;
+  line-height: .5rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1335,6 +1380,11 @@ select {
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-green-900 {
+  --tw-text-opacity: 1;
+  color: rgb(22, 66, 22 / var(--tw-text-opacity));
 }
 
 .text-white {
