--- a/public/css/app.css
+++ b/public/css/app.css
@@ -301,6 +301,11 @@ summary {
 Removes the default spacing and border for appropriate elements.
 */
 
+.display-7 {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
 blockquote,
 dl,
 dd,
