--- a/public/css/app.css
+++ b/public/css/app.css
@@ -306,6 +306,12 @@ Removes the default spacing and border for appropriate elements.
   font-weight: bold;
 }
 
+
+.display-8 {
+  font-size: 1rem;
+  font-weight: bold;
+}
+
 blockquote,
 dl,
 dd,
