--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1840,3 +1840,38 @@ select {
 }
 
 .help-text {}
+
+
+.form-group {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.checkbox-container {
+  background-color: #f8f9fa;
+  border-radius: 5px;
+  padding-left: 15px;
+  margin-bottom: 20px;
+}
+
+.whatsapp-checkbox,
+.consent-checkbox {
+  margin-right: 5px;
+}
+
+.checkbox-label {
+  font-size: 20px;
+  font-weight: 600;
+  color: #495057;
+}
+
+.whatsapp-label,
+.consent-label {
+  cursor: pointer;
+}
+
+.whatsapp-checkbox:checked+.whatsapp-label,
+.consent-checkbox:checked+.consent-label {
+  color: #007bff;
+}
