--- a/public/css/public.css
+++ b/public/css/public.css
@@ -28,3 +28,20 @@ input[disabled] {
 .active.start-date {
     background: var(--main) !important;
 }
+
+@media screen and (max-width: 768px) {
+    .invite-form {
+        justify-content: center;
+        .invite-popup-input {
+            width: 100% !important;
+        }
+        .invite-popup-btn {
+            border-radius: 5px !important;
+            margin-top: 10px !important;
+        }
+    }
+
+    .w-100-sm {
+        width: 100% !important;
+    }
+}
