--- a/public/css/public.css
+++ b/public/css/public.css
@@ -13,6 +13,9 @@ body {
 input[disabled] {
     background: rgba(128, 128, 128, 0.15) !important;
 }
+.pointer {
+    cursor: pointer;
+}
 /** End of Utilities */
 
 
@@ -28,3 +31,25 @@ input[disabled] {
 .active.start-date {
     background: var(--main) !important;
 }
+
+.single-student-card {
+    display: none;
+    .close-btn {
+        cursor: pointer;
+    }
+    .student-country-flag {
+        height: 25px;
+        width: 60px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        border-radius: 3px;
+    }
+    .detail {
+        margin-bottom: 10px;
+        label, span {
+            font-size: 18px;
+        }
+    }
+}
+
