--- a/public/css/public.css
+++ b/public/css/public.css
@@ -13,6 +13,9 @@ body {
 }
 
 /** Start of Utilities */
+.btn {
+    border-radius: 5px !important;
+}
 input[disabled] {
     background: rgba(128, 128, 128, 0.15) !important;
 }
@@ -25,10 +28,15 @@ input.form-control {
 .btn-green {
     background: #1A8754 !important;
 }
-.btn-danger:hover {
+.btn-danger {
     background: #DC3346 !important;
-    border: 1px solid #DC3346 !important;
-    opacity: .9;
+    color: white !important;
+
+    &:hover {
+         background: #DC3346 !important;
+         border: 1px solid #DC3346 !important;
+         opacity: .9;
+    }
 }
 #students-tables {
     input[type='radio'] {
